# catch-your-partner

./: .env.example  .gitignore  Makefile  README.md  ROADMAP.md  auto_matcher.py  check_image.py  compose-smoke.sh  create_profile.py  docker-compose.yml  face_matcher.py  folder_watcher.py  image_validator.py  index.html  match_logger.py  matches.json  render.yaml  user_profile.py  user_settings.py
admin/: index.html
beta_backend/: .dockerignore  Dockerfile  README.md  alembic.ini  demo_flow.py  dev.db  entrypoint.sh  events.py  feature_flags.py  module_registry.py  pyproject.toml  requirements.txt  smoke_live.py  test_public.db
beta_backend/alembic/: env.py  script.py.mako
beta_backend/alembic/versions/: 20260317_0001_initial_core.py  20260317_0002_identity_phase3a.py  20260317_0003_entitlements_phase3b.py  20260318_0004_companion_phase4.py  20260321_0005_trust_matching_safety.py  20260321_0006_id_verification_foundation.py
beta_backend/app/: app.py  auth.py  config.py  db.py  dependencies.py  errors.py  events.py  feature_flags.py  logging.py  middleware.py  module_registry.py
beta_backend/app/models/: db.py  schemas.py
beta_backend/app/routers/: auth.py  companion.py  core.py  health.py  identity.py  modules.py
beta_backend/app/services/: auth_service.py  companion_service.py  core_service.py  identity_service.py  module_service.py  sms_service.py
beta_backend/tests/: conftest.py  test_companion.py  test_core_e2e.py  test_identity.py
beta_frontend/: app.html  demo.html
ios/CatchYourPartnerMobile.xcodeproj/: project.pbxproj
(+11 files in other folders)
